--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "n": "node --watch ./src/index.js"
+    "n": "node --watch ./src/index.js",
+    "base": "./db/crearBase.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.8.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.10.1"
   }
