--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,12 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./functions/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "n": "node --watch ./src/index.js",
-    "base": "./db/crearBase.js"
+    "start": "node ./functions/index.js",
+    "build":"netlify deploy --prod"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "morgan": "^1.10.0",
-    "mysql2": "^3.10.1"
+    "mysql2": "^3.10.1",
+    "serverless-http": "^3.2.0"
   }
 }
