--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "n": "node --watch ./src/index.js",
     "start": "node ./functions/index.js",
-    "build":"netlify deploy --prod"
+    "build": "netlify deploy --prod"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +19,7 @@
     "mongodb": "^6.8.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.10.1",
+    "netlify-cli": "^17.33.4",
     "serverless-http": "^3.2.0"
   }
 }
