--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,11 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "./functions/index.js",
+  "main": "./.netlify/functions/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "n": "node --watch ./src/index.js",
-    "start": "node ./functions/index.js",
+    "start": "node ./.netlify/functions/index.js",
     "build": "netlify deploy --prod"
   },
   "author": "",
