--- a/nuevo client/package.json
+++ b/nuevo client/package.json
@@ -15,6 +15,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
