--- a/nuevo client/package.json
+++ b/nuevo client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
