--- a/nuevo client/package.json
+++ b/nuevo client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-toast": "^1.2.2",
     "aos": "^2.3.4",
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
