--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.1",
+    "axios": "^1.7.7",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
