--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^6.8.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.10.1"
+    "mysql2": "^3.10.1",
+    "resend": "^4.0.1-alpha.0"
   }
 }
