--- a/nuevo client/package.json
+++ b/nuevo client/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "aos": "^2.3.4",
+    "chart.js": "^4.4.6",
     "lodash": "^4.17.21",
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
