--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.1",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
