--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.6",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dropbox": "^10.34.0",
